objects/CEE_Location__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Scheduler_4_Email__c</fullName>
        <description>Additional Secondary scheduler 4 Email for CPOC</description>
        <label>Additional Scheduler 4 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Additional_Scheduler_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Additional Secondary scheduler 4 for CPOC</description>
        <label>Additional Scheduler 4</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CEE_Locations3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Secondary_Scheduler2_Email__c</fullName>
        <description>Additional Secondary schedular 2Email for CPOC object</description>
        <label>Additional Scheduler 2 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Additional_Secondary_Scheduler2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Aditional secondary schedular 2 for CPOC</description>
        <label>Additional Scheduler 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CEE_Locations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Secondary_Scheduler_Email__c</fullName>
        <description>This field is used for only san jose location</description>
        <label>Additional Scheduler 1 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Additional_Secondary_Scheduler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is only for San jose location</description>
        <label>Additional Scheduler 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CEE_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Secondary_scheduler_3_Email__c</fullName>
        <description>AAdditional Secondary scheduler 3 Email for CPOC</description>
        <label>Additional Scheduler 3 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Additional_Secondary_scheduler_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Additional Secondary scheduler 3 for CPOC</description>
        <label>Additional Scheduler 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CEE_Locations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Code__c</fullName>
        <label>Department Code</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geographic_Location__c</fullName>
        <description>Geographic Location</description>
        <label>Geographic Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>Americas CXC</fullName>
                </value>
                <value>
                    <fullName>Americas FSO</fullName>
                </value>
                <value>
                    <fullName>Americas IoE</fullName>
                </value>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>APJ CXC</fullName>
                </value>
                <value>
                    <fullName>APJ FSO</fullName>
                </value>
                <value>
                    <fullName>APJ IoE</fullName>
                </value>
                <value>
                    <fullName>EMEAR</fullName>
                </value>
                <value>
                    <fullName>EMEAR CXC</fullName>
                </value>
                <value>
                    <fullName>EMEAR FSO</fullName>
                </value>
                <value>
                    <fullName>EMEAR IoE</fullName>
                </value>
                <value>
                    <fullName>GC CXC</fullName>
                </value>
                <value>
                    <fullName>GC FSO</fullName>
                </value>
                <value>
                    <fullName>GC IoE</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>SJ CXC</fullName>
                </value>
                <value>
                    <fullName>SJ FSO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ITCE_Scheduler__c</fullName>
        <label>ITCE Scheduler</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Is_Location_Active__c</fullName>
        <description>Setting to determine visibility of a CEE Location in the CEE application.</description>
        <label>Is Location Active?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <defaultValue>"English"</defaultValue>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <label>Location Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EBC/EC</fullName>
                </value>
                <value>
                    <fullName>Non EBC/EC</fullName>
                </value>
                <value>
                    <fullName>ITCE</fullName>
                </value>
                <value>
                    <fullName>ITCE Cisco</fullName>
                </value>
                <value>
                    <fullName>ITCE Non Cisco</fullName>
                </value>
                <value>
                    <fullName>Tradeshow</fullName>
                </value>
                <value>
                    <fullName>CPOC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Scheduler_Email__c</fullName>
        <inlineHelpText>The Primary Scheduler and Site Contact.</inlineHelpText>
        <label>Primary Scheduler Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primary_Scheduler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Scheduler</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CES_Locations_Primary_Scheduler</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scheduler_Mailer_Alias__c</fullName>
        <description>Scheduler Mailer Alias</description>
        <label>Scheduler Mailer Alias</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Secondary_Scheduler_Email__c</fullName>
        <label>Secondary Scheduler Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Secondary_Scheduler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Scheduler</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CES_Locations_Secondary_Scheduler</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Close_Time__c</fullName>
        <defaultValue>"17:30"</defaultValue>
        <inlineHelpText>In 24-hour time format - "##:##"</inlineHelpText>
        <label>Site Close Time</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Open_Time__c</fullName>
        <defaultValue>"08:00"</defaultValue>
        <inlineHelpText>In 24-hour time format - "##:##"</inlineHelpText>
        <label>Site Open Time</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Time_Zone__c</fullName>
        <label>Site Time Zone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>The location details for a given Location, either a Field Sales Office (FSO), Executive Briefing Center (EBC), or Customer Briefing Center provided as part of the Customer Engagement implementation.</description>
    <label>CEE Location</label>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CEE Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>ALL</fullName>
        <columns>NAME</columns>
        <columns>Is_Location_Active__c</columns>
        <columns>Location_Type__c</columns>
        <columns>Primary_Scheduler__c</columns>
        <columns>Primary_Scheduler_Email__c</columns>
        <columns>Secondary_Scheduler__c</columns>
        <columns>Secondary_Scheduler_Email__c</columns>
        <columns>Site_Time_Zone__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Geographic_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>City__c</field>
            <operation>equals</operation>
            <value>San Jose</value>
        </filters>
        <label>ALL</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Active_Locations</fullName>
        <columns>NAME</columns>
        <columns>Secondary_Scheduler_Email__c</columns>
        <columns>Location_Type__c</columns>
        <columns>Primary_Scheduler__c</columns>
        <columns>Primary_Scheduler_Email__c</columns>
        <columns>Secondary_Scheduler__c</columns>
        <columns>Site_Time_Zone__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Location_Active__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>Active Locations</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CPOC_Labs</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Location_Type__c</field>
            <operation>equals</operation>
            <value>CPOC</value>
        </filters>
        <label>CPOC Labs</label>
        <language>en_US</language>
    </listViews>
    <validationRules>
        <fullName>CES_Location_Name_Unique</fullName>
        <active>true</active>
        <description>Check Location Name field for uniqueness (unique on standard field "Name")</description>
        <errorConditionFormula>Name = VLOOKUP( $ObjectType.CEE_Location__c.Fields.Name , $ObjectType.CEE_Location__c.Fields.Name , Name ) &amp;&amp; Id &lt;&gt; VLOOKUP( $ObjectType.CEE_Location__c.Fields.Id , $ObjectType.CEE_Location__c.Fields.Name , Name )</errorConditionFormula>
        <errorDisplayField>Address_Line_1__c</errorDisplayField>
        <errorMessage>Location Name must be Unique</errorMessage>
    </validationRules>
</CustomObject>